feat: 글 등록 화면 추가

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>pamphBoard</title>
 </head>
 <body>
 <h1>PamphBoard</h1>
+<div>
+  <div>
+    <a href="/articles/save"> 글 등록</a>
+  </div>
+</div>
 </body>
 </html>
