chore: 경로, html 파일명 수정

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 <h1>PamphBoard</h1>
 <div>
   <div>
-    <a href="/articles/save"> 글 등록</a>
+    <a href="/posts/save"> 글 등록</a>
   </div>
 </div>
 </body>
