--- a/src/main/resources/templates/posts-save.html
+++ b/src/main/resources/templates/posts-save.html
@@ -13,7 +13,7 @@
         <label for="writer">작성자</label>
         <input type="text" id="writer" placeholder="작성자 이름을 입력하세요.">
         <label for="password">비밀번호</label>
-        <input type="text" id="password" placeholder="비밀번호를 입력하세요.">
+        <input type="password" id="password" placeholder="비밀번호를 입력하세요.">
       </div>
       <div>
         <label for="title">제목</label>
