--- a/src/main/resources/templates/post/savePostForm.html
+++ b/src/main/resources/templates/post/savePostForm.html
@@ -11,17 +11,17 @@
     <form th:action="@{/posts/save}" th:object="${PostDto}" method="post">
       <div>
         <label th:for="writer">작성자</label>
-        <input type="text" th:field="*{writer}" placeholder="작성자 이름을 입력하세요.">
+        <input type="text" th:field="*{writer}" placeholder="작성자 이름을 입력하세요." required>
         <label th:for="password">비밀번호</label>
-        <input type="password" th:field="*{password}" placeholder="비밀번호를 입력하세요.">
+        <input type="password" th:field="*{password}" placeholder="비밀번호를 입력하세요." required>
       </div>
       <div>
         <label th:for="title">제목</label>
-        <input type="text" th:field="*{title}" placeholder="글 제목을 입력하세요.">
+        <input type="text" th:field="*{title}" placeholder="글 제목을 입력하세요." required>
       </div>
       <div>
         <label th:for="content">내용</label>
-        <textarea th:field="*{content}" placeholder="글 내용을 입력하세요."></textarea>
+        <textarea th:field="*{content}" placeholder="글 내용을 입력하세요." required></textarea>
       </div>
       <button id="btn-save">등록</button>
     </form>
