feat: 게시글 목록 조회 화면 연결

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,8 @@
 <h1>PamphBoard</h1>
 <div>
   <div>
-    <a href="/posts/save"> 글 등록</a>
+    <a href="/posts/save"> 게시글 등록</a>
+    <a href="/posts/list"> 게시글 목록</a>
   </div>
 </div>
 </body>
