feat: 게시글 목록 조회 기능 추가

--- a/src/main/resources/templates/post/postList.html
+++ b/src/main/resources/templates/post/postList.html
@@ -21,18 +21,18 @@
     <table>
       <thead>
       <tr>
-        <th>글 번호</th>
+        <th>번호</th>
         <th>제목</th>
         <th>작성자</th>
         <th>작성일시</th>
       </tr>
       </thead>
       <tbody>
-      <tr>
-        <td>example</td>
-        <td>example</td>
-        <td>example</td>
-        <td>example</td>
+      <tr th:each="post, status : ${foundPosts}">
+        <td th:text="${status.count}"></td>
+        <td th:text="${post.title}"></td>
+        <td th:text="${post.writer}"></td>
+        <td th:text="${post.regDate}"></td>
       </tr>
       </tbody>
     </table>
