refactor: 날짜 변환

--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -32,7 +32,7 @@
         <td th:text="${status.count}"></td>
         <td th:text="${post.title}"></td>
         <td th:text="${post.writer}"></td>
-        <td th:text="${post.regDate}"></td>
+        <td th:text="${{post.regDate}}"></td>
       </tr>
       </tbody>
     </table>
