--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>pamphBoard</title>
-  <link th:href="@{/../static/css/style.css}" rel="stylesheet">
+  <link th:href="@{/css/style.css}" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
