--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,6 +12,12 @@
       <div class="logo">
       </div>
       <div class="menu">
+        <nav id="nav_item">
+          <ul>
+            <li><a th:href="@{#}">Home</a></li>
+            <li><a th:href="@{#}">Board</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
   </header>
