design: logos in the nav

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,9 @@
 <body>
 <nav th:class="navbar">
   <div th:class="navbar_logo">
-    <a th:href="@{#}">pamphBoard</a>
+    <a th:href="@{#}">
+      <img th:src="@{/images/logos/pamphBoard-logo.png}" th:width="150"/>
+    </a>
   </div>
   <ul th:class="navbar_menu">
     <li>
