design: add footer

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,7 @@
   <title>pamphBoard</title>
   <link th:href="@{/assets/fontawesome/css/all.css}" th:rel="stylesheet">
   <link th:href="@{/css/style.css}" th:rel="stylesheet">
+  <link th:href="@{/css/footer.css}" th:rel="stylesheet">
 </head>
 <body>
 <nav th:class="navbar">
@@ -34,5 +35,10 @@
     </li>
   </ul>
 </nav>
+<footer th:class="footer">
+  <div th:class="footer_right">
+    <p>Copyright 2022 pamph91. All right reserved | 7942dyddlfsla@naver.com</p>
+  </div>
+</footer>
 </body>
 </html>
