design: add link icons

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -33,6 +33,11 @@
         <i class="fa-brands fa-twitter"></i>
       </a>
     </li>
+    <li>
+      <a th:href="@{https://rosepamphyle42.tistory.com}" th:target="_blank">
+        Tistory
+      </a>
+    </li>
   </ul>
 </nav>
 <footer th:class="footer">
