--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>pamphBoard</title>
   <link th:href="@{/assets/fontawesome/css/all.css}" th:rel="stylesheet">
-  <link th:href="@{/css/style.css}" th:rel="stylesheet">
+  <link th:href="@{/css/nav.css}" th:rel="stylesheet">
   <link th:href="@{/css/footer.css}" th:rel="stylesheet">
 </head>
 <body>
