refactor: url changed

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,13 +11,13 @@
 <header>
   <nav th:class="navbar">
     <div th:class="navbar_logo">
-      <a th:href="@{#}">
+      <a th:href="@{/}">
         <img th:src="@{/images/logos/pamphBoard-logo.png}" th:width="150"/>
       </a>
     </div>
     <ul th:class="navbar_menu">
       <li>
-        <a th:href="@{#}">Home</a>
+        <a th:href="@{/}">Home</a>
       </li>
       <li>
         <a th:href="@{#}">Board</a>
