--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -6,6 +6,7 @@
   --color-five: #314663;
   --color-six: #2F4858;
 }
+
 @font-face {
   font-family: "Source Sans Pro";
   src: url("/static/assets/googlefonts/fonts/SourceSansPro-Regular.ttf") format("truetype");
@@ -41,7 +42,7 @@ a {
 }
 
 .navbar_menu li:hover {
-  background-color: var(--color-two);
+  background-color: #000;
   border-radius: 4px;
 }
 
