--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,18 +26,23 @@
     </ul>
     <ul th:class="navbar_link_icons">
       <li>
-        <a th:href="@{#}">
+        <a th:href="@{https://www.facebook.com/profile.php?id=100069028367348}" th:target="_blank">
           <i class="fa-brands fa-facebook"></i>
         </a>
       </li>
       <li>
-        <a th:href="@{#}">
+        <a th:href="@{https://twitter.com/YNNNzpOjL9YYgJZ}" th:target="_blank">
           <i class="fa-brands fa-twitter"></i>
         </a>
       </li>
       <li>
         <a th:href="@{https://rosepamphyle42.tistory.com}" th:target="_blank">
-          Tistory
+          <i class="fa-solid fa-t"></i>
+        </a>
+      </li>
+      <li>
+        <a th:href="@{https://github.com/dyddlfsla}" th:target="_blank">
+          <i class="fa-brands fa-github"></i>
         </a>
       </li>
     </ul>
