--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,53 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-  <title>pamphBoard</title>
-  <link th:href="@{/assets/fontawesome/css/all.css}" th:rel="stylesheet">
-  <link th:href="@{/css/nav.css}" th:rel="stylesheet">
-  <link th:href="@{/css/footer.css}" th:rel="stylesheet">
+<head th:replace="~{layout/fragment/common_head :: common_head(~{::link})}">
   <link th:href="@{/css/home_section.css}" th:rel="stylesheet">
 </head>
 <body>
-<header>
-  <nav th:class="navbar">
-    <div th:class="navbar_logo">
-      <a th:href="@{/}">
-        <img th:src="@{/images/logos/pamphBoard-logo.png}" th:width="100"/>
-      </a>
-    </div>
-    <ul th:class="navbar_menu">
-      <li>
-        <a th:href="@{/}">Home</a>
-      </li>
-      <li>
-        <a th:href="@{#}">Board</a>
-      </li>
-    </ul>
-    <ul th:class="navbar_link_icons">
-      <li>
-        <a th:href="@{https://www.facebook.com/profile.php?id=100069028367348}" th:target="_blank">
-          <i class="fa-brands fa-facebook"></i>
-        </a>
-      </li>
-      <li>
-        <a th:href="@{https://twitter.com/YNNNzpOjL9YYgJZ}" th:target="_blank">
-          <i class="fa-brands fa-twitter"></i>
-        </a>
-      </li>
-      <li>
-        <a th:href="@{https://rosepamphyle42.tistory.com}" th:target="_blank">
-          <i class="fa-solid fa-t"></i>
-        </a>
-      </li>
-      <li>
-        <a th:href="@{https://github.com/dyddlfsla}" th:target="_blank">
-          <i class="fa-brands fa-github"></i>
-        </a>
-      </li>
-    </ul>
-  </nav>
-</header>
+<header th:replace="~{layout/fragment/header :: header}"></header>
 <section th:class="section">
   <article th:class="section_intro">
     <span th:class="heading">
@@ -61,10 +18,6 @@
     </p>
   </article>
 </section>
-<footer th:class="footer">
-  <div th:class="footer_right">
-    <p>Copyright 2022 pamphBoard All right reserved | 7942dyddlfsla@naver.com</p>
-  </div>
-</footer>
+<footer th:replace="~{layout/fragment/footer :: footer}"></footer>
 </body>
 </html>
