--- a/src/main/resources/templates/layout/fragment/header.html
+++ b/src/main/resources/templates/layout/fragment/header.html
@@ -10,7 +10,7 @@
         <a th:href="@{/}">Home</a>
       </li>
       <li>
-        <a th:href="@{#}">Board</a>
+        <a th:href="@{/post/list}">Board</a>
       </li>
     </ul>
     <ul th:class="navbar_link_icons">
