--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -9,7 +9,7 @@
 
 @font-face {
   font-family: "Source Sans Pro";
-  src: url("/static/assets/googlefonts/fonts/SourceSansPro-Regular.ttf") format("truetype");
+  src: url("/static/assets/googlefonts/fonts/SourceSansPro-Regular.ttf") format("ttf");
 }
 
 body {
