--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -26,8 +26,10 @@
       </tr>
       </tbody>
     </table>
-    <div th:class="board_btn">
-
+    <div th:class="board_button">
+        <button th:type="button" th:onclick="location.href='/post/save'">
+          <i class="fa-solid fa-pencil"></i>글쓰기
+        </button>
     </div>
   </article>
 </section>
