--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -28,7 +28,7 @@
     </table>
     <div th:class="board_button">
         <button th:type="button" th:onclick="location.href='/post/save'">
-          <i class="fa-solid fa-pencil"></i>글쓰기
+          <i class="fa-solid fa-pencil fa-xs"></i>글쓰기
         </button>
     </div>
   </article>
