design: color changed

--- a/src/main/resources/static/css/postForm_section.css
+++ b/src/main/resources/static/css/postForm_section.css
@@ -65,7 +65,7 @@ textarea {
   border-radius: 5px;
   letter-spacing: 3px;
   border: none;
-  background-color: var(--color-four);
+  background-color: var(--color-six);
   color: white;
   font-size: 14px;
   width: 85px;
