--- a/src/main/resources/static/css/nav.css
+++ b/src/main/resources/static/css/nav.css
@@ -5,6 +5,7 @@
   --color-four: #404169;
   --color-five: #314663;
   --color-six: #2F4858;
+  --color-seven: #0c1b33;
 }
 
 @font-face {
@@ -44,7 +45,7 @@ a {
 }
 
 .navbar_menu li:hover {
-  background-color: #000;
+  background-color: var(--color-seven);
   border-radius: 4px;
 }
 
