--- a/src/main/resources/templates/post/save.html
+++ b/src/main/resources/templates/post/save.html
@@ -8,9 +8,9 @@
 <section th:class="section">
   <form th:class="section_postForm" th:action="@{/post/save/new}" th:object="${PostDto}" th:method="post">
     <div th:class="|form_top item|">
-      <div th:class="writer">
-        <label th:for="writer">글쓴이</label>
-        <input th:type="text" th:field="*{writer}" th:placeholder="|이름을 입력하세요.|" required>
+      <div th:class="author">
+        <label th:for="author">글쓴이</label>
+        <input th:type="text" th:field="*{author}" th:placeholder="|이름을 입력하세요.|" required>
       </div>
       <div th:class="password">
         <label th:for="password">비밀번호</label>
