design: 버튼 색상 추가

--- a/src/main/resources/static/css/postForm_section.css
+++ b/src/main/resources/static/css/postForm_section.css
@@ -65,11 +65,15 @@ textarea {
   border-radius: 5px;
   letter-spacing: 3px;
   border: none;
-  background-color: var(--color-six);
+  background-color: var(--color-four);
   color: white;
   font-size: 14px;
   width: 85px;
   height: 35px;
+}
+
+.btn button:hover {
+  background-color: var(--color-six);
 }
 
 .btn button i {
