--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
     <p>
       Here is Someone's Workspace.<br>
       You could come across something that looks very odd or somehow stupid.<br>
-      But as time goes by, It might be pretty Awesome!
+      But as time goes by, it looks better Maybe..
     </p>
   </article>
 </section>
