--- a/src/main/resources/static/css/board_section.css
+++ b/src/main/resources/static/css/board_section.css
@@ -34,6 +34,14 @@ td, th {
   font-size: 14px;
 }
 
+td > a {
+  color:#000;
+}
+
+td > a:hover {
+  text-decoration: underline;
+}
+
 tr:first-child td {
   border-top: none;
 }
