--- a/src/main/resources/templates/post/save.html
+++ b/src/main/resources/templates/post/save.html
@@ -24,10 +24,10 @@
       <textarea th:field="*{content}" th:rows="30" th:cols="82" th:placeholder="|내용을 입력하세요.|" required></textarea>
     </div>
     <div th:class="btn">
-      <button th:type="submit" th:class="btn-save">
+      <button th:type="submit" th:class="btn_save">
         <i class="fa-solid fa-check fa-xs"></i>완료
       </button>
-      <button th:type="button" th:onclick="|location.href='@{/post/list}'|">
+      <button th:type="button" th:class="btn_cancel" th:onclick="|location.href='@{/post/list}'|">
         <i class="fa-solid fa-xmark fa-xs"></i>취소
       </button>
     </div>
