--- a/src/main/resources/static/css/post_read_section.css
+++ b/src/main/resources/static/css/post_read_section.css
@@ -12,18 +12,23 @@
 }
 
 .heading {
-  padding: 15px 0;
-  font-weight: bold;
+  padding: 15px 10px;
   border-top: 2px solid var(--color-three);
   border-bottom: 1px solid var(--color-three);
 }
 
 .info {
+  display: flex;
+  justify-content: space-between;
+}
 
+.info .reg_date {
+  font-size: 14px;
+  color: dimgray;
 }
 
 .content {
-  padding: 15px 0;
+  padding: 15px 10px;
   border-bottom: 2px solid var(--color-three);
 }
 
