--- a/src/main/resources/templates/post/list.html
+++ b/src/main/resources/templates/post/list.html
@@ -20,7 +20,7 @@
       <tbody>
       <tr th:each="post, status : ${foundPosts}">
         <td th:text="${status.count}">번호</td>
-        <td><a th:text="${post.title}" th:href="@{post/read/${post.postIdx}}">제목</a></td>
+        <td><a th:text="${post.title}" th:href="@{/post/read/{postIdx}(postIdx=${post.postIdx})}">제목</a></td>
         <td th:text="${post.author}">글쓴이</td>
         <td th:text="${#temporals.format(post.regDate, 'yy-MM-dd HH:mm')}">등록일</td>
       </tr>
