--- a/src/main/resources/templates/post/read.html
+++ b/src/main/resources/templates/post/read.html
@@ -6,18 +6,18 @@
 <body>
 <header th:replace="~{layout/fragment/header :: header}"></header>
 <section th:class="section">
-  <article th:class="section_contents" th:object="${PostDto}">
+  <article th:class="section_contents">
     <div th:class="heading">
       <div>
-        <h1>제목</h1>
+        <h1 th:text="${foundPost.title}">제목</h1>
       </div>
       <div th:class="info">
-        <span th:class="author">아이디</span>
-        <span th:class="reg_date">등록일시</span>
+        <span th:text="${foundPost.author}" th:class="author">아이디</span>
+        <span th:text="'| ' + ${#temporals.format(foundPost.regDate, 'yy-MM-dd HH:mm')}" th:class="reg_date">등록일</span>
       </div>
     </div>
     <div th:class="|content|">
-      <p>본문</p>
+      <p th:text="${foundPost.content}">본문</p>
     </div>
     <div th:class="btn">
       <div th:class="left">
