--- a/src/main/resources/templates/layout/fragment/common_head.html
+++ b/src/main/resources/templates/layout/fragment/common_head.html
@@ -1,6 +1,7 @@
 <head th:fragment="common_head(links)">
   <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
   <title>pamphBoard</title>
+  <link th:rel="icon" th:href="@{/images/favicon/pb_favicon_88i_icon.ico}">
   <link th:href="@{/assets/fontawesome/css/all.css}" th:rel="stylesheet">
   <link th:href="@{/css/nav.css}" th:rel="stylesheet">
   <link th:href="@{/css/footer.css}" th:rel="stylesheet">
