feat: 공백, 줄바꿈 표시 오류 수정

--- a/src/main/resources/static/css/post_read_section.css
+++ b/src/main/resources/static/css/post_read_section.css
@@ -32,6 +32,10 @@
   border-bottom: 2px solid var(--color-three);
 }
 
+.content p {
+  white-space: break-spaces;
+}
+
 .item {
   text-align: center;
 }
