design: 상세조회 css 수정

--- a/src/main/resources/static/css/post_read_section.css
+++ b/src/main/resources/static/css/post_read_section.css
@@ -20,11 +20,9 @@
 .info {
   display: flex;
   justify-content: space-between;
-}
-
-.info .reg_date {
   font-size: 14px;
   color: dimgray;
+  padding: 0px 5px;
 }
 
 .content {
