--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 <section th:class="section">
   <article th:class="section_intro">
     <span th:class="heading">
-      <i class="fa-solid fa-triangle-exclamation"></i>
+      <i class="fa-solid fa-skull-crossbones"></i>
       Notice
     </span>
     <p>
