--- a/src/main/resources/static/css/post_save.css
+++ b/src/main/resources/static/css/post_save.css
@@ -32,6 +32,13 @@
   height: 20px;
 }
 
+.notice p {
+  padding-left: 100px;
+  margin-bottom: 0px;
+  font-size:12px;
+  color: dimgray;
+}
+
 .title {
   font-weight: bold;
   padding: 15px 0;
