--- a/src/main/resources/templates/post/save.html
+++ b/src/main/resources/templates/post/save.html
@@ -10,18 +10,22 @@
     <div th:class="|form_top item|">
       <div th:class="author">
         <label th:for="author">글쓴이</label>
-        <input th:type="text" th:field="*{author}" th:placeholder="|이름을 입력하세요.|" required>
+        <input th:type="text" th:field="*{author}" th:placeholder="|이름을 입력하세요.|" th:required>
       </div>
       <div th:class="password">
         <label th:for="password">비밀번호</label>
         <input type="password" th:field="*{password}" th:placeholder="|비밀번호를 입력하세요.|" th:maxlength="10" th:required>
       </div>
     </div>
+    <div th:class="notice">
+      <p>1) 간단한 비밀번호를 사용하면 타인이 수정 또는 삭제할 수 있습니다.<br>
+        2) 불건전한 내용 및 초상권이나 저작권을 침해하는 게시물의 경우 법적인 책임을 질 수 있습니다.</p>
+    </div>
     <div th:class="|title item|">
-      <input th:type="text" th:field="*{title}" th:size="80" th:placeholder="|제목을 입력하세요.|" required>
+      <input th:type="text" th:field="*{title}" th:size="80" th:placeholder="|제목을 입력하세요.|" th:required>
     </div>
     <div th:class="|content item|">
-      <textarea th:field="*{content}" th:rows="30" th:cols="82" th:placeholder="|내용을 입력하세요.|" required></textarea>
+      <textarea th:field="*{content}" th:rows="30" th:cols="82" th:placeholder="|내용을 입력하세요.|" th:required></textarea>
     </div>
     <div th:class="btn">
       <button th:type="submit" th:class="btn_save">
