feat: 등록 시 확인 기능 추가

--- a/src/main/resources/templates/post/save.html
+++ b/src/main/resources/templates/post/save.html
@@ -28,7 +28,7 @@
       <textarea th:field="*{content}" th:rows="30" th:cols="82" th:placeholder="|내용을 입력하세요.|" th:required></textarea>
     </div>
     <div th:class="btn">
-      <button th:type="submit" th:class="btn_save">
+      <button th:type="button" th:class="btn_save" th:onclick="save()">
         <i class="fa-solid fa-check fa-xs"></i>완료
       </button>
       <button th:type="button" th:class="btn_cancel" th:onclick="|location.href='@{/post/list}'|">
@@ -38,5 +38,6 @@
   </form>
 </section>
 <footer th:replace="~{layout/fragment/footer :: footer}"></footer>
+<script th:src="@{/js/post_save.js}"></script>
 </body>
 </html>
