--- a/src/main/resources/templates/post/save.html
+++ b/src/main/resources/templates/post/save.html
@@ -29,7 +29,7 @@
     </div>
     <div th:class="btn">
       <button th:type="button" th:class="btn_save" th:onclick="save()">
-        <i class="fa-solid fa-check fa-xs"></i>완료
+        <i class="fa-solid fa-check fa-xs"></i>확인
       </button>
       <button th:type="button" th:class="btn_cancel" th:onclick="|location.href='@{/post/list}'|">
         <i class="fa-solid fa-xmark fa-xs"></i>취소
