--- a/src/main/resources/templates/post/save.html
+++ b/src/main/resources/templates/post/save.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{layout/fragment/common_head :: common_head(~{::link})}">
-  <link th:href="@{/css/post_save.css}" th:rel="stylesheet">
+  <link th:href="@{/css/post/post_save.css}" th:rel="stylesheet">
 </head>
 <body>
 <header th:replace="~{layout/fragment/header :: header}"></header>
