refactor: 중복 이벤트 제거

--- a/src/main/resources/templates/post/read.html
+++ b/src/main/resources/templates/post/read.html
@@ -21,7 +21,7 @@
     </div>
     <div th:class="btn_box">
       <div th:class="left_btn">
-        <button th:type="button" th:class="btn_return_list" th:onclick="|location.href='@{/post/list}'|">
+        <button th:type="button" th:class="btn_return_list">
           <i class="fa-solid fa-bars fa-xs"></i>목록
         </button>
       </div>
