--- a/src/main/resources/static/css/post/post_read.css
+++ b/src/main/resources/static/css/post/post_read.css
@@ -66,7 +66,7 @@
 }
 
 .verify_box {
-  /*visibility: hidden;*/
+  visibility: hidden;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
   padding: 15px 5px;
