--- a/src/main/resources/templates/post/modify.html
+++ b/src/main/resources/templates/post/modify.html
@@ -10,11 +10,11 @@
     <div th:class="|form_top item|">
       <div th:class="author">
         <label th:for="author">글쓴이</label>
-        <input th:type="text" th:value="${foundPost.author}" th:placeholder="|이름을 입력하세요.|" th:required>
+        <input th:type="text" th:value="${foundPost.author}">
       </div>
       <div th:class="password">
         <label th:for="password">비밀번호</label>
-        <input type="password" th:value="${foundPost.password}" th:placeholder="|비밀번호를 입력하세요.|" th:maxlength="10" th:required>
+        <input type="password" th:value="${foundPost.password}" th:maxlength="10">
       </div>
     </div>
     <div th:class="notice">
@@ -22,10 +22,10 @@
         2) 불건전한 내용 및 초상권이나 저작권을 침해하는 게시물의 경우 법적인 책임을 질 수 있습니다.</p>
     </div>
     <div th:class="|title item|">
-      <input th:type="text" th:value="${foundPost.title}" th:size="80" th:placeholder="|제목을 입력하세요.|" th:required>
+      <input th:type="text" th:value="${foundPost.title}" th:size="80">
     </div>
     <div th:class="|content item|">
-      <textarea th:text="${foundPost.content}" th:rows="30" th:cols="82" th:placeholder="|내용을 입력하세요.|" th:required></textarea>
+      <textarea th:text="${foundPost.content}" th:rows="30" th:cols="82"></textarea>
     </div>
     <div th:class="btn">
       <button th:type="button" th:class="btn_update">
