chore: class 명 변경

--- a/src/main/resources/templates/post/read.html
+++ b/src/main/resources/templates/post/read.html
@@ -27,7 +27,7 @@
         </button>
       </div>
       <div th:class="right_btn">
-        <button th:type="submit" th:class="btn_update">
+        <button th:type="submit" th:class="btn_modify">
           <i class="fa-solid fa-pen-to-square fa-xs"></i>수정
         </button>
         <button th:type="button" th:class="btn_delete">
